[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiobjective"
version = "0.1.0"
license = {file = "LICENSE"}

[tool.setuptools]
packages = [
  "multiobjective",
  "multiobjective.algorithms",
  "multiobjective.metrics",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]
